# squirrel-explorer

./: index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
.github/: scala-steward.conf
.github/workflows/: ci.yaml  gh-pages.yml
scalajs/: .gitignore  build.sbt
scalajs/project/: plugins.sbt
scalajs/src/main/scala/tf/bug/: MonacoEditor.scala  NArrayFactory.scala  Sq.scala  SquirrelExplorer.scala  WasmApi.scala
scalajs/src/main/scala/tf/bug/cnut/: Cnut.scala  Diagnostic.scala  MutableCnutRender.scala  RenderedCnut.scala  ShiftJisCodec.scala  SqClosure.scala  SqFunctionProto.scala  SqInstruction.scala  SqLineInfo.scala  SqLocalVarInfo.scala  SqObject.scala  SqOuterValue.scala
scalajs/src/main/scala/tf/bug/fe/: CnutEditorState.scala  Codemirror.scala  CompilerWorkerThread.scala  FloatDiagnosticBuilder.scala  LezerCnutLanguage.scala  LezerCnutNodes.scala  LezerSquirrelLanguage.scala  MonacoEditor.scala  MonacoSquirrelLanguage.scala  RenderResult.scala  RendererWorkerThread.scala  SquirrelExplorer.scala  SquirrelExplorerFrontend.scala  WorkerConnection.scala
scalajs/src/main/scala/tf/bug/worker/: DragonboxApi.scala  RenderCommand.scala  SquirrelCompilerWorker.scala  SquirrelExplorerWorker.scala  SquirrelRendererWorker.scala  SquirrelWorker.scala  WasmApi.scala
src/: cnut_index_widget.ts  cnut_lezer.grammar  diff_cnut.ts  lezer.d.ts  squirrel_highlight.ts  squirrel_lezer.grammar  squirrel_monarch.ts  squirrel_tokens.ts  style.css  vite-env.d.ts
wasm/: .gitattributes  .gitignore  Makefile  README.md  api.c  dragonbox.cpp  emscripten-cmake.bat  emscripten-cmake.sh  emscripten-windows.cross  emscripten.cross  meson.build  meson.options
wasm/SQUIRREL2/: Makefile  meson.build
wasm/SQUIRREL2/sq/: Makefile  meson.build
wasm/SQUIRREL2/sqstdlib/: Makefile  meson.build
wasm/SQUIRREL2/squirrel/: Makefile  meson.build  sqpcheader.h  sqstate.h  sqvm.cpp
